Fix background scrollbar

--- a/public/_/components/less/mystyle.less
+++ b/public/_/components/less/mystyle.less
@@ -4,6 +4,7 @@ body {
 	background-position: center center;
 	background-size: cover;
 	width:100%;
+	position:fixed;
 }
 .form-margin{
 	margin-top: 50px;
@@ -11,10 +12,8 @@ body {
 .formx{
 	background: rgba(61, 62, 60, 0.5); 
 	margin-bottom: 100px;
-	width:65%;
 	overflow: auto;
 	height:550px;
-	position:fixed;
 }
 .form-bg{
 	background: rgba(232, 225, 165, 0.9); 
